--- a/.env
+++ b/.env
@@ -35,4 +35,5 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=e2e42e08b38546f156d6260fc3dd4303
+JWT_TTL=3600
 ###< lexik/jwt-authentication-bundle ###
